--- a/index.html
+++ b/index.html
@@ -15,19 +15,20 @@
 </head>
 
 <body>
-
-    <div class="nav">
-        <a  href="#">Início</a>
-        <a  href="#">Sobre mim</a>
-        <a  href="#">Projetos</a>
-        <a  href="#">Contato</a>
+    <div class="container-1">
+        <div class="container">
+            <a href="#">Início</a>
+            <a href="#">Sobre mim</a>
+            <a href="#">Projetos</a>
+            <a href="#">Contato</a>
+        </div>    
     </div>
     
     <section>
 
-        <aside>
-            <h1>Paulo</h1>
-            <h1>Henrique</h1>
+        <aside class="title">
+            <h1 class="h1">Paulo</h1>
+            <h1 class="h1">Henrique</h1>
             <p>A tecnologia transformou minha vida e hoje utilizo ela</p> 
             <p>mudar a sua!</p>
         </aside>
