--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
                 </div>
 
                 <div class="p-1">
-                    <p>A tecnologia transformou minha vida e hoje utilizo ela para</p> 
-                    <p>mudar a sua!</p>
+                    <p>A tecnologia transformou minha vida e hoje utilizo ela para mudar a sua!</p>
+                    <div class="download">
+                        <a class="button" href="/Meu-Primeiro-Site/index.html">Avalie meu currículo!</a>
+                    </div>
                 </div>  
             </aside>
 
@@ -63,8 +65,10 @@
 
         <div class="container-2">
             <h1 class="h1-2" class="title">Sobre mim</h1>
-            <p class="p-2">Me chamo Paulo Henrique, tenho 22 anos, sou natural de São Paulo e moro na Bahia desde 2001. Sou casado. A família é meu alicerce e também minha inspiração. Busco sempre ter um ótimo tempo de qualidade com minha esposa e nossa família. Meus pais me educaram de maneira rígida e com muito amor, mas não significa que as coisas foram fáceis. Eles sempre lutaram muito para nos dar o melhor que podiam. Sempre me guiaram da melhor forma para que eu soubesse enfrentar de cabeça erguida todos os desafios que viriam a aparecer em minha vida. No que se refere a minha carreica, comecei a trabalhar aos 15 anos como jovem aprendiz em uma lanchonete e de lá pra cá venho escalando por onde passo, com muita coragem e conhecimento consegui me situar e coloborar com todas as equipes que trabalhei. Eu diria que sou uma pessoa que busca sempre se aprimorar. Ao fim de cada dia eu reflito sobre o que posso fazer de diferente para ser uma pessoa e profissional melhor. Gosto de ter metas claras. Objetivos definidos tém guiado minha vida para os resultados obtidos até aqui. Também apreciovivenciar desafios, pois costumo enxergá-los como oportunidades de aprendizado e superacão. Não sou perfeito, mas a cada realização eu cresço. “Escolha um trabalho que você ama e você nunca terá que trabalhar um dia sequer na vida.” Confúcio.</p>
-            <p class="p-3">Este sou eu.</p>
+            <p class="p-2">Me chamo Paulo Henrique, tenho 22 anos, sou natural de São Paulo e moro na Bahia desde 2001. Sou casado. A família é meu alicerce e também minha inspiração. Busco sempre ter um ótimo tempo de qualidade com minha esposa e nossa família.</p> 
+            <p class="p-2">Meus pais me educaram de maneira rígida e com muito amor, mas não significa que as coisas foram fáceis. Eles sempre lutaram muito para nos dar o melhor que podiam. Sempre me guiaram da melhor forma para que eu soubesse enfrentar de cabeça erguida todos os desafios que viriam a aparecer em minha vida. No que se refere a minha carreica, comecei a trabalhar aos 15 anos como jovem aprendiz em uma lanchonete e de lá pra cá venho escalando por onde passo, com muita coragem e conhecimento consegui me situar e coloborar com todas as equipes que trabalhei. Eu diria que sou uma pessoa que busca sempre se aprimorar.</p> 
+            <p class="p-2">Ao fim de cada dia eu reflito sobre o que posso fazer de diferente para ser uma pessoa e profissional melhor. Gosto de ter metas claras. Objetivos definidos tém guiado minha vida para os resultados obtidos até aqui. Também apreciovivenciar desafios, pois costumo enxergá-los como oportunidades de aprendizado e superacão. Não sou perfeito, mas a cada realização eu cresço. “Escolha um trabalho que você ama e você nunca terá que trabalhar um dia sequer na vida.” <br>-- Confúcio.</br></p>
+            <p class="p-3">Este sou eu!</p>
             
         </div>
 
@@ -73,6 +77,20 @@
     <section>
         <div class="container-3">
             <h1 class="h1-3" class="title">Projetos</h1>
+        </div>
+        <div class="projetos">
+            <div>
+                <img class="projeto-1" src="/Meu-Primeiro-Site/Complements/img/paisagem.jpeg">
+            </div>
+            <div>
+                <img class="projeto-1" src="/Meu-Primeiro-Site/Complements/img/paisagem.jpeg">
+            </div>
+            <div>
+                <img class="projeto-1" src="/Meu-Primeiro-Site/Complements/img/paisagem.jpeg">
+            </div>
+            <div>
+                <img class="projeto-1" src="/Meu-Primeiro-Site/Complements/img/paisagem.jpeg">
+            </div>
         </div>
     </section>
 
